# UEPipeline

./: .gitignore  CMakeLists.txt  CMakePresets.json
editor/: CMakeLists.txt
editor/include/: app.h  config.h  console.h  pathpicker.h  paths.h  pipeline.h  runner.h  shell.h  theme.h
editor/src/: app.cpp  config.cpp  console.cpp  main.cpp  pathpicker.cpp  paths.cpp  pipeline.cpp  runner.cpp
